--- a/Frontend/src/components/MealDetails.css
+++ b/Frontend/src/components/MealDetails.css
@@ -4,13 +4,13 @@
   right: 0;
   width: 450px;
   height: 100%;
-  background-color: #ffffff; 
+  background-color: #ffffff;
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.529);
   overflow-y: auto;
   padding: 20px;
   z-index: 1000;
   animation: slideIn 0.2s ease-in-out;
-  color: rgb(91, 90, 90); 
+  color: rgb(91, 90, 90);
   padding-top: 50px;
   padding-bottom: 100px;
 
@@ -20,6 +20,7 @@
   from {
     right: -800px;
   }
+
   to {
     right: 0;
   }
@@ -54,19 +55,30 @@
 .mealdetails-subtitle {
   margin-top: 20px;
   font-size: 18px;
- color: rgb(37, 37, 37);
+  color: rgb(37, 37, 37);
   font-weight: 600;
 }
 
 .mealdetails-ingredients {
   padding-left: 20px;
   list-style-type: disc;
-   color: rgb(49, 49, 49);
+  color: rgb(49, 49, 49);
 }
 
 .mealdetails-instructions {
   white-space: pre-line;
   margin-top: 10px;
- color: rgb(44, 44, 44);
+  color: rgb(44, 44, 44);
   margin-bottom: 100px;
+}
+
+
+@media (max-width: 768px) {
+  .mealdetails-modal {
+
+    width: 350px;
+
+
+  }
+
 }
